--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -19,6 +19,8 @@ body
 	position: relative
 	line-height: 1.44
 	font-family: $default-font
+	min-width: 320px
+	overflow-x: hidden
 
 img
 	display: block
@@ -81,14 +83,26 @@ a
 		justify-content: space-between
 		height: 56px
 		padding: 0 30px
+		@media only screen and (max-width : 768px)
+			height: auto
+			padding: 10px 15px
+		@media only screen and (max-width : 480px)
+			flex-direction: column
+			justify-content: center
 	&__left, &__right
 		display: flex
 		align-items: center
+	&__left
+		@media only screen and (max-width : 768px)
+			flex-direction: column
+			justify-content: center
 	&__logo
 		display: block
 		width: 166px
 		border-right: 1px solid #F1F1F1
 		padding-right: 25px
+		@media only screen and (max-width : 768px)
+			padding-right: 0
 		svg
 			display: block
 			max-width: 100%
@@ -97,6 +111,9 @@ a
 		font-size: 14px
 		font-weight: 500
 		padding-left: 25px
+		@media only screen and (max-width : 768px)
+			padding-left: 0
+			margin: 10px 0 15px
 	&__right
 		ul
 			display: flex
@@ -126,8 +143,11 @@ a
 	ul
 		display: flex
 		align-items: center
+		flex-wrap: wrap
 	&__item
-		width: 33.33%
+		width: auto
+		flex: auto
+		min-width: 100px
 	&__link
 		display: block
 		line-height: 56px
