--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -148,6 +148,8 @@ a
 		width: auto
 		flex: auto
 		min-width: 100px
+		@media only screen and (max-width : 768px)
+			border: 1px solid #ccc
 	&__link
 		display: block
 		line-height: 56px
