--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -113,7 +113,7 @@ a
 		padding-left: 25px
 		@media only screen and (max-width : 768px)
 			padding-left: 0
-			margin: 10px 0 15px
+			margin: 5px 0 16px
 	&__right
 		ul
 			display: flex
@@ -181,6 +181,9 @@ a
 		margin: 0 auto
 		padding: 0 15px
 		padding-top: 30px
+		@media only screen and (max-width : 768px)
+			flex-direction: column
+			padding-top: 15px
 	&__right
 		width: 100%
 		padding-bottom: 100px
@@ -211,6 +214,9 @@ a
 	flex: none
 	margin-right: 50px
 	background-color: #fff
+	@media only screen and (max-width : 768px)
+		width: 100%
+		margin-right: 0
 	&__link
 		display: flex
 		align-items: center
