--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -307,6 +307,12 @@ a
 /* Таблица */
 .table
 	width: 100%
+	display: block
+	min-width: 650px
+	&__wrap
+		overflow: auto
+		@media only screen and (max-width : 768px)
+			margin-bottom: 30px
 	&__flex
 		display: flex
 		align-items: center
@@ -323,6 +329,8 @@ a
 			padding: 0
 			@media only screen and (max-width : 480px)
 				flex-direction: column
+				align-items: flex-start
+				text-align: left
 	&__controls
 		display: flex
 		align-items: center
