--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -338,6 +338,7 @@ a
 				font-size: 30px
 		&--caption
 			padding: 0
+			margin-bottom: 15px
 			@media only screen and (max-width : 768px)
 				flex-direction: column
 				align-items: flex-start
