--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -95,6 +95,9 @@ a
 		@media only screen and (max-width : 480px)
 			flex-direction: column
 			justify-content: center
+			padding-left: 10px
+			padding-right: 10px
+			margin-bottom: 10px
 	&__left, &__right
 		display: flex
 		align-items: center
@@ -121,12 +124,21 @@ a
 			padding-left: 0
 			margin: 5px 0 16px
 	&__right
+		@media only screen and (max-width : 480px)
+			width: 100%
 		ul
 			display: flex
 			align-items: center
+			@media only screen and (max-width : 480px)
+				justify-content: space-between
+				width: 100%
 			li
+				@media only screen and (max-width : 480px)
+					white-space: nowrap
 				&:not(:last-of-type)
 					margin-right: 35px
+					@media only screen and (max-width : 480px)
+						margin-right: 0
 	&__link
 		display: flex
 		align-items: center
@@ -136,6 +148,9 @@ a
 			font-size: 14px
 			font-weight: 500
 			margin-right: 10px
+			@media only screen and (max-width : 480px)
+				font-size: 13px
+				margin-right: 5px
 		&:hover
 			opacity: 0.7
 	&__icon
@@ -143,8 +158,11 @@ a
 		svg
 			display: block
 			max-width: 100%
-			height: auto
-		
+			height: 22px
+			width: 22px
+			@media only screen and (max-width : 480px)
+				width: 16px
+				height: 16px	
 .menu
 	ul
 		display: flex
@@ -183,7 +201,7 @@ a
 		display: flex
 		align-items: flex-start
 		width: 100%
-		max-width: 1245px
+		max-width: 2500px
 		margin: 0 auto
 		padding: 0 15px
 		padding-top: 30px
@@ -277,6 +295,17 @@ a
 		@media only screen and (max-width : 768px)
 			flex-direction: column
 
+.menu-title
+	text-transform: uppercase
+	font-weight: bold
+	color: $main_blue
+	text-align: right
+	padding-right: 50px
+	line-height: 60px
+	display: none
+	@media only screen and (max-width : 992px)
+		display: block
+
 // Mobile button
 .mobile-btn
 	width: 50px
@@ -345,9 +374,14 @@ a
 				flex-direction: column
 				align-items: flex-start
 				text-align: left
+			button
+				@media only screen and (max-width : 480px)
+					width: 100%
 	&__controls
-		display: flex
 		align-items: center
+		display: flex
+		justify-content: space-around
+		width: 100%
 		li
 			&:not(:last-of-type)
 				margin-right: 30px
