--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -209,11 +209,12 @@ a
 			flex-direction: column
 			padding-top: 15px
 	&__right
-		width: 100%
+		width: calc(100% - 314px)
 		padding-bottom: 100px
 		@media only screen and (max-width : 992px)
 			margin-top: 30px
 			padding-bottom: 30px
+			width: 100%
 	&__line
 		display: flex
 		align-items: center
@@ -348,6 +349,8 @@ a
 	@media only screen and (max-width : 650px)
 		padding-right: 15px
 		padding-left: 15px
+		display: inline-block
+		width: auto
 	&__wrap
 		overflow: auto
 		@media only screen and (max-width : 768px)
