--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -257,7 +257,7 @@ a
 .sidebar
 	width: 264px
 	flex: none
-	margin-right: 50px
+	margin-right: $offset
 	background-color: #fff
 	position: relative
 	@media only screen and (max-width : 992px)
@@ -343,19 +343,24 @@ a
 
 /* Таблица */
 .table
-	width: 100%
-	display: block
-	min-width: 650px
-	@media only screen and (max-width : 650px)
+	width: auto
+	display: inline-block
+	min-width: 100%
+	padding-left: calc(#{$offset} - 3px)
+	padding-right: 15px
+	@media only screen and (max-width : 992px)
 		padding-right: 15px
 		padding-left: 15px
 		display: inline-block
 		width: auto
 	&__wrap
 		overflow: auto
+		min-width: 100%
+		margin-left: calc(-#{$offset} + 3px)
+		margin-right: -15px
 		@media only screen and (max-width : 768px)
 			margin-bottom: 30px
-		@media only screen and (max-width : 650px)
+		@media only screen and (max-width : 992px)
 			margin-right: -15px
 			margin-left: -15px
 	&__flex
