--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -57,7 +57,7 @@ a
 	border-radius: 0
 	color: #fff
 	white-space: nowrap
-	outline: none
+	// outline: none
 	transition: 0.3s
 	cursor: pointer
 	text-align: center
@@ -456,7 +456,7 @@ fieldset
 	border: none
 	box-shadow: none
 	border-radius: 0
-	outline: none
+	// outline: none
 	-webkit-appearance: none
 	box-shadow: inset 0 0 0 50px #ffffff !important
 	&::-webkit-input-placeholder
