--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -57,10 +57,11 @@ a
 	border-radius: 0
 	color: #fff
 	white-space: nowrap
-	// outline: none
 	transition: 0.3s
 	cursor: pointer
 	text-align: center
+	&:focus
+		outline: 2px solid #E63312
 	&:hover
 		opacity: 0.7
 	&--small
@@ -456,9 +457,10 @@ fieldset
 	border: none
 	box-shadow: none
 	border-radius: 0
-	// outline: none
 	-webkit-appearance: none
 	box-shadow: inset 0 0 0 50px #ffffff !important
+	&:focus
+		outline: 2px solid #E63312
 	&::-webkit-input-placeholder
 		font-size: 14px
 		color: #666
@@ -491,6 +493,11 @@ fieldset
 		&.dropdown-active
 			&::after
 				transform: rotate(0deg)!important
+
+.keydown
+	box-sizing: border-box
+	&:focus
+		outline: 2px solid #E63312
 
 /* Выбор файла */
 .file-upload
