фокус для ссылок

--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -41,6 +41,8 @@ a
 		-webkit-focus-ring-color: transparent
 		outline: none
 		text-decoration: none
+	&:focus
+		outline: 1px solid #E63312
 
 .h2
 	font-size: 42px
