move color to vars

--- a/resources/admin/sass/_vars.sass
+++ b/resources/admin/sass/_vars.sass
@@ -1,2 +1,24 @@
 $default-font: "HyundaiSansHead", sans-serif
 $offset: 50px
+
+$ActiveRed: #E63312
+$Main_blue: #002C5F
+$Sand: #E4DCD3
+$Second_blue: #00AAD2
+
+$Gray_BG: #F6F3F2
+$Sand_BG: #E4DCD3
+$White_BG: #FFFFFF
+
+$Second_text: #666666
+$Text_black: #000000
+$Third_text: #B7B7B7
+
+$Button_disable: #777673
+$Button_hover: #103A71
+$Light_grey_hover: #F8F8F8
+$Light_grey_scroll_bar: #F1F1F1
+
+$White: #FFFFFF
+$Gray: #CCCCCC
+$Selectize: #24375B
