--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -6,10 +6,10 @@
 
 body input:focus:required:invalid,
 body textarea:focus:required:invalid
-	color: #666
+	color: $Second_text
 body input:required:valid,
 body textarea:required:valid
-	color: #666
+	color: $Second_text
 
 html, body
 	height: 100%
@@ -42,28 +42,28 @@ a
 		outline: none
 		text-decoration: none
 	&:focus
-		outline: 1px solid #E63312
+		outline: 1px solid $ActiveRed
 
 .h2
 	font-size: 42px
 	font-weight: 500
-	color: #000
+	color: $Text_black
 	margin: 0
 
 .button
-	background-color: #002C5F
+	background-color: $Main_blue
 	margin: 0
 	padding: 0
 	box-shadow: none
 	border: none
 	border-radius: 0
-	color: #fff
+	color: $White
 	white-space: nowrap
 	transition: 0.3s
 	cursor: pointer
 	text-align: center
 	&:focus
-		outline: 2px solid #E63312
+		outline: 2px solid $ActiveRed
 	&:hover
 		opacity: 0.7
 	&--small
@@ -81,11 +81,11 @@ a
 		span
 			margin-right: 10px
 	&--grey
-		background-color: #777673
+		background-color: $Button_disable
 	
 /* Header */
 .header
-	color: #000
+	color: $Text_black
 	&__top-line
 		display: flex
 		align-items: center
@@ -111,7 +111,7 @@ a
 	&__logo
 		display: block
 		width: 166px
-		border-right: 1px solid #F1F1F1
+		border-right: 1px solid $Light_grey_scroll_bar
 		padding-right: 25px
 		@media only screen and (max-width : 768px)
 			padding-right: 0
@@ -147,7 +147,7 @@ a
 		align-items: center
 		transition: 0.3s
 		span
-			color: #002C5F
+			color: $Main_blue
 			font-size: 14px
 			font-weight: 500
 			margin-right: 10px
@@ -176,29 +176,29 @@ a
 		flex: auto
 		min-width: 100px
 		@media only screen and (max-width : 768px)
-			border: 1px solid #ccc
+			border: 1px solid $Gray
 	&__link
 		display: block
 		line-height: 56px
 		text-align: center
-		background-color: #E4DCD3
+		background-color: $Sand_BG
 		transition: 0.3s
 		span
 			white-space: nowrap	
 			font-size: 14px
 			font-weight: 500
-			color: #000
+			color: $Text_black
 			transition: 0.3s
 		&:hover
 			opacity: 0.7
 		&.active
-			background-color: #00AAD2
+			background-color: $Second_blue
 			span
-				color: #fff
+				color: $White
 
 /* Content */
 .content
-	background-color: #F6F3F2
+	background-color: $Gray_BG
 	min-height: calc(100vh - 114px)
 	&__center
 		display: flex
@@ -261,7 +261,7 @@ a
 	width: 264px
 	flex: none
 	margin-right: $offset
-	background-color: #fff
+	background-color: $White_BG
 	position: relative
 	@media only screen and (max-width : 992px)
 		width: 100%
@@ -278,7 +278,7 @@ a
 		span
 			font-size: 16px
 			font-weight: 500
-			color: #000
+			color: $Text_black
 			transition: 0.3s
 	&__icon
 		max-width: 40px
@@ -302,7 +302,7 @@ a
 .menu-title
 	text-transform: uppercase
 	font-weight: bold
-	color: $main_blue
+	color: $Main_blue
 	text-align: right
 	padding-right: 50px
 	line-height: 60px
@@ -326,7 +326,7 @@ a
 	span
 		width: 25px
 		height: 2px
-		background-color: $main_blue
+		background-color: $Main_blue
 		display: block
 		margin: 3px auto
 		transform: rotate(0)
@@ -401,32 +401,32 @@ a
 				&:not(:last-of-type)
 					margin-right: 15px
 	&__link, &__link:hover, &__link:visited, &__link:focus
-		color: #00AAD2
+		color: $Second_blue
 		text-decoration: underline
 		font-size: 14px
 	td, th
-		border: 1px solid #F1F1F1
+		border: 1px solid $Light_grey_scroll_bar
 		padding: 5px 0
 	caption
 		margin-bottom: 35px
 		@media only screen and (max-width : 580px)
 			margin-bottom: 20px
 	thead
-		background-color: #002C5F
+		background-color: $Main_blue
 		font-size: 16px
-		color: #fff
+		color: $White
 		font-weight: 500
 		tr
 			height: 56px
 	tbody
-		background-color: #fff
+		background-color: $White_BG
 		font-size: 16px
 		tr
 			height: 56px
 			td
 				&:first-of-type
 					width: 71px
-					background-color: #E4DCD3
+					background-color: $Sand_BG
 					text-align: center
 					font-weight: 500
 					@media only screen and (max-width : 768px)
@@ -445,7 +445,7 @@ fieldset
 	display: block
 	font-size: 16px
 	font-weight: 500
-	color: #000
+	color: $Text_black
 	margin-bottom: 15px
 	@media only screen and (max-width : 580px)
 		margin-bottom: 5px
@@ -455,32 +455,32 @@ fieldset
 	width: 100%
 	padding: 14px 20px
 	font-size: 14px
-	color: #000
+	color: $Text_black
 	border: none
 	box-shadow: none
 	border-radius: 0
 	-webkit-appearance: none
-	box-shadow: inset 0 0 0 50px #ffffff !important
+	box-shadow: inset 0 0 0 50px $White_BG !important
 	&:focus
-		outline: 2px solid #E63312
+		outline: 2px solid $ActiveRed
 	&::-webkit-input-placeholder
 		font-size: 14px
-		color: #666
+		color: $Second_text
 	&:-moz-placeholder
 		font-size: 14px
-		color: #666
+		color: $Second_text
 	&::-moz-placeholder
 		font-size: 14px
-		color: #666
+		color: $Second_text
 	&:-ms-input-placeholder
 		font-size: 14px
-		color: #666
+		color: $Second_text
 
 /* Дропдаун */
 .select
 	.selectize-input
 		font-size: 14px
-		color: #666666
+		color: $Second_text
 		padding: 14px 20px
 		box-shadow: none
 		border: none
@@ -490,7 +490,7 @@ fieldset
 			height: 0!important
 			border-left: 6px solid transparent!important
 			border-right: 6px solid transparent!important
-			border-bottom: 6px solid #24375B!important
+			border-bottom: 6px solid $Selectize!important
 			transform: rotate(180deg)!important
 		&.dropdown-active
 			&::after
@@ -499,7 +499,7 @@ fieldset
 .keydown
 	box-sizing: border-box
 	&:focus
-		outline: 2px solid #E63312
+		outline: 2px solid $ActiveRed
 
 /* Выбор файла */
 .file-upload
@@ -526,7 +526,7 @@ fieldset
 		display: none
 	&__name
 		font-size: 16px
-		color: #B7B7B7
+		color: $Third_text
 		margin-left: 25px
 		@media only screen and (max-width : 580px)
 			margin-left: 0
@@ -541,7 +541,7 @@ fieldset
 		align-items: center
 		flex-wrap: wrap
 		font-size: 16px
-		color: #B7B7B7
+		color: $Third_text
 	&__item
 		padding: 5px 0
 		&:not(:last-of-type)
@@ -563,12 +563,12 @@ fieldset
 		display: none
 		&:checked
 			& + .checkbox__box
-				border-color: #00AAD2
+				border-color: $Second_blue
 				background-size: 70%
 	&__box
 		width: 16px
 		height: 16px
-		border: 2px solid #B7B7B7
+		border: 2px solid $Third_text
 		margin-right: 10px
 		background-image: url('../../images/check.svg')
 		background-repeat: no-repeat
@@ -579,7 +579,7 @@ fieldset
 		width: 100px
 		font-size: 14px
 		font-weight: 500
-		color: #000
+		color: $Text_black
 		white-space: nowrap
 
 .radio
@@ -592,7 +592,7 @@ fieldset
 		display: none
 		&:checked
 			& + .radio__circle
-				border-color: #00AAD2
+				border-color: $Second_blue
 				&::after
 					transform: scale(1)
 				
@@ -601,7 +601,7 @@ fieldset
 		width: 16px
 		height: 16px
 		border-radius: 50%
-		border: 2px solid #B7B7B7
+		border: 2px solid $Third_text
 		margin-right: 10px
 		transition: 0.3s
 		&::after
@@ -616,21 +616,21 @@ fieldset
 			width: 6px
 			height: 6px
 			border-radius: 50%
-			background-color: #00AAD2
+			background-color: $Second_blue
 			transform: scale(0)
 			transition: 0.3s
 	&__title
 		width: 100px
 		font-size: 14px
 		font-weight: 500
-		color: #000
+		color: $Text_black
 		white-space: nowrap
 
 /* Пагинация */
 .pagination
 	display: flex
 	align-items: center
-	color: #000
+	color: $Text_black
 	&__first
 		margin-right: 15px
 	&__last
@@ -645,13 +645,13 @@ fieldset
 	&__link, &__link:active, &__link:focus, &__link:visited
 		font-size: 16px
 		font-weight: 500
-		color: #000
+		color: $Text_black
 		transition: 0.3s
 		&:hover
 			opacity: 0.7
-			color: #000
+			color: $Text_black
 		&.active
-			color: #00AAD2
+			color: $Second_blue
 			text-decoration: underline
 
 .mce-widget.mce-notification.mce-notification-warning.mce-has-close.mce-in
@@ -660,8 +660,8 @@ fieldset
 /* Календарь */
 .ui-datepicker
 	width: auto
-	background-color: #fff
-	color: #000
+	background-color: $White_BG
+	color: $Text_black
 	padding: 20px
 	box-shadow: 0 5px 20px 0 rgba(0,0,0,0.25)
 	table
@@ -671,7 +671,7 @@ fieldset
 		th
 			font-size: 14px
 			font-weight: 400
-			color: #666666
+			color: $Second_text
 	tbody
 		td
 			width: 35px
@@ -703,7 +703,7 @@ fieldset
 		right: 0
 		top: 0
 		bottom: 0
-		background-color: #F8F8F8
+		background-color: $Light_grey_hover
 		border-radius: 50%
 	.ui-datepicker-prev
 		order: 2
@@ -728,11 +728,11 @@ fieldset
 			width: 15px
 			height: 14px
 	.ui-datepicker-other-month
-		color: #B7B7B7
+		color: $Third_text
 	.ui-datepicker-current-day
 		a
-			background-color: #00AAD2
-			color: #fff
+			background-color: $Second_blue
+			color: $White
 			border-radius: 50%
 	
 
