--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -407,6 +407,8 @@ a
 	td, th
 		border: 1px solid $Light_grey_scroll_bar
 		padding: 5px 0
+	th .table__flex
+		cursor: pointer
 	caption
 		margin-bottom: 35px
 		@media only screen and (max-width : 580px)
