--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -376,6 +376,7 @@ a
 		justify-content: space-between
 		width: 100%
 		padding: 0 30px
+		flex-wrap: wrap
 		h2
 			@media only screen and (max-width : 768px)
 				font-size: 35px
@@ -411,9 +412,13 @@ a
 		font-size: 14px
 	td, th
 		border: 1px solid $Light_grey_scroll_bar
-		padding: 5px 0
+		padding: 5px 30px
 	th .table__flex
 		cursor: pointer
+	tr.search
+		background-color: $Sand_BG
+		td:not(:last-child)
+			padding: 10px
 	caption
 		margin-bottom: 35px
 		@media only screen and (max-width : 580px)
