upd color visited link

--- a/resources/admin/sass/main.sass
+++ b/resources/admin/sass/main.sass
@@ -41,7 +41,7 @@ a
 		-webkit-focus-ring-color: transparent
 		outline: none
 		text-decoration: none
-		color: $White
+		color: $Second_blue
 	&:focus
 		outline: 1px solid $ActiveRed
 
